# openinfomate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLA.md  Dockerfile  README.md  docker-compose.ghcr.yml  docker-compose.host.yml  docker-compose.yml  pyproject.toml  topics.example.txt
contracts/: internal-bridge-v1.json
docker/: entrypoint.sh
docs/: deploy.md  searxng.md
scripts/: deploy_docker_instance.sh  install.sh  install_systemd_system.sh  install_systemd_user.sh  setup_searxng.sh
src/tracker/: actions.py  (+53 more)
tests/: conftest.py  test_actions_auto_bind_profile.py  test_actions_rss_sources_bulk.py  test_actions_search_query_normalization.py  test_admin_push_ui.py  test_admin_settings_remote_write_permissions.py  test_admin_settings_view_model.py  test_ai_setup_autofix.py  test_alert_budget.py  test_alert_formatting.py  test_api_admin_env_update.py  test_api_admin_settings_patch.py  test_api_admin_topic_and_source_ops.py  test_api_ai_setup.py  test_api_basic.py  test_api_basic_auth.py  test_api_config_agent.py  test_api_discovery.py  test_api_doctor.py  test_api_events.py  test_api_internal_bridge.py  test_api_profile_propose.py  test_api_push_test.py  test_api_setup_profile.py  test_api_setup_topic.py  test_api_setup_topic_discover_now.py  test_api_telegram_connect.py  test_api_telegram_poll_lock.py  test_api_topic_gates.py  test_api_topic_propose.py  test_bridge_service.py  test_candidate_preview.py  test_cli_candidates.py  test_cli_doctor.py  test_cli_event_list.py  test_cli_push_test.py  test_cli_source_preview.py  test_cli_stats_requires_init.py  (+131 more)
(+54 files in other folders)
