[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openinfomate"
version = "0.1.0"
description = "OpenInfoMate is an AI-powered open information mate that builds your interest profile and curates feeds from RSS, meta search and other open sources."
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "fastapi>=0.110.0",
  "httpx>=0.27.2",
  "jinja2>=3.1.4",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "python-dateutil>=2.9.0.post0",
  "rich>=13.7.1",
  "sqlalchemy>=2.0.29",
  "typer>=0.12.3",
  "uvicorn>=0.29.0",
  "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
  "freezegun>=1.4.0",
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.6.9",
]

[project.scripts]
tracker = "tracker.cli:app"
openinfomate = "tracker.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tracker = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".research"]
